# CustomCar

./: .clang-format  .clangd  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
assets/custom_topper_example/lesbianhappy/: lesbianhappy.json  lesbianhappy.upk
scripts/: init-submodules.bat  install.bat  update_version.ps1
src/: CustomCar.cpp  CustomCar.hpp  Cvars.hpp  Events.hpp  PluginConfig.hpp  SettingsGUI.cpp  pch.h  version.hpp
src/boilerplate/: GuiBase.cpp  GuiBase.hpp  Resource.hpp
src/components/: CustomAssetTypes.hpp  CustomCars.cpp  CustomCars.hpp  CustomToppers.cpp  CustomToppers.hpp  GameCars.cpp  GameCars.hpp
src/util/: CustomFormatters.hpp  FNameCache.cpp  FNameCache.hpp  HookManager.cpp  Instances.cpp  Instances.hpp  Macros.hpp
